--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -8,4 +8,8 @@ html
 				include ../slides/slide-2
 				include ../slides/slide-3
 				include ../slides/slide-4
+				include ../slides/slide-5
+				include ../slides/slide-6
+				include ../slides/slide-7
+				include ../slides/slide-8
 		include inc/scripts
