--- a/src/slides/slide-3.jade
+++ b/src/slides/slide-3.jade
@@ -1,11 +1,13 @@
 section
 	section
-		h1 Slide 2 - 1
-		p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam totam illo illum quia harum est quo, debitis incidunt nemo consequatur culpa dolorum dolor suscipit ad, cumque eligendi necessitatibus at error?
-	section
-		h1 Slide 2 - 2
+		h4 Sumário
 		ul
-			li.fragment item1
-			li.fragment item2
-			li.fragment item3
-			li.fragment item4
+			li let e const
+			li Arrow functions
+			li Template literals
+			li Parâmetros default
+			li Literais octais e binários
+			li Spread Operators
+			li Classes
+			li Herança
+			li Generators
