--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -12,4 +12,12 @@ html
 				include ../slides/slide-6
 				include ../slides/slide-7
 				include ../slides/slide-8
+				include ../slides/slide-9
+				include ../slides/slide-10
+				include ../slides/slide-11
+				include ../slides/slide-12
+				include ../slides/slide-13
+				include ../slides/slide-14
+				include ../slides/slide-15
+				include ../slides/slide-16
 		include inc/scripts
